# Web-Server

./: .gitignore  CMakeLists.txt  README.md  clean_build.sh  clean_coverage.sh  server_config  server_config_deploy  start_docker.sh
crud_files/test/: 1
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
files/markdown-pages/: create.html  delete.html  markdown.css  styles.css  update.html  utils.js
files/static attic/: hello.txt
files/static2/: hello.txt
files/static3/: hello.txt
files/static85/: b.html
include/: config_parser.h  constants.h  content_request_handler.h  echo_request_handler.h  error_request_handler.h  file_reader.h  handler_factory.h  location_data.h  logging.h  markdown.h  markdown_parser.h  markdown_tokens.h  registry.h  request_handler.h  request_manager.h  server.h  server_configuration.h  servlet.h  session.h  signal_handler.h
include/filesystem/: filesystem.h  filesystem_constants.h  filesystem_interface.h
include/handlers/: crud_handler.h  echo_handler.h  error_handler.h  handler_registration.h  health_handler.h  markdown_handler.h  request_handler.h  sleep_handler.h  static_handler.h
src/: config_parser.cc  content_request_handler.cc  echo_request_handler.cc  error_request_handler.cc  file_reader.cc  handler_factory.cc  location_data.cc  logging.cc  markdown.cc  markdown_parser.cc  markdown_tokens.cc  request_handler.cc  request_manager.cc  server.cc  server_configuration.cc  server_main.cc  servlet.cc  session.cc  signal_handler.cc
src/filesystem/: filesystem.cc
src/handlers/: crud_handler.cc  echo_handler.cc  error_handler.cc  handler_registration.cc  health_handler.cc  markdown_handler.cc  request_handler.cc  sleep_handler.cc  static_handler.cc
tests/: alphabetical_port_config  ambiguous_behavior_config  config_parser_test.cc  content_handler_test.cc  crlf_config  crud_handler_test.cc  decimal_port_config  echo_handler_test.cc  error_handler_test.cc  filesystem_test.cc  health_handler_test.cc  integration_tests.py  invalid_match_modifier_config  markdown_handler_test.cc  markdown_parser_test.cc  multiple_server_blocks_config  non_unique_listen_config  one_path_config  open_brace_config  over_labeled_config  quotes_config  request_handler_test.cc  request_manager_test.cc  server_test.cc  servlet_test.cc  session_test.cc  static_handler_test.cc  two_paths_config  undefined_behavior_config  unterminated_nested_line_config
tests/configs/: all_items_config  alphabetical_port_config  ambiguous_behavior_config  bad_double_quote_follow  bad_keyword_config  bad_server_line_config  bad_single_quote_follow  close_brace_config  comments_config  context_as_directive_config  decimal_port_config  default_behavior_config  directive_as_context_config  docker_config  duplicate_locations_config  echo_given_root_config  echo_with_root_config  good_locations_config  invalid_handler_type_config  invalid_match_modifier_config  multiple_port_config  multiple_server_blocks_config  negative_port_config  no_ports_config  non_unique_listen_config  one_path_config  open_brace_config  over_labeled_config  port_in_http_config  port_too_large_config  prefix_echo_with_root_config  quoted_args_config  quotes_config  semicolon_after_block_config  semicolon_before_block_config  static_multiple_roots_config  static_no_roots_config  too_few_args_config  too_many_args_config  too_many_ports_config  (+6 more)
tests/filesystem/: fake_filesystem.h
tests/markdown/: sample.html  sample.md
